--- a/www/ui/milestone8x_screens/3-6-0.html
+++ b/www/ui/milestone8x_screens/3-6-0.html
@@ -1,1 +1,257 @@
-<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN""http://collabnet.com/dtds/collabnet_transitional_10.dtd"><html> <head>  <title>approve reject user submitted X (3.6.0.)</title>  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" /> </head> <body>  <form action="#" method="get">   <div id="globalnav">    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>   </div>   <table border="0" cellspacing="0" cellpadding="0" width="95%">    <tr>     <td width="100" id="leftcol">      <div id="projnav">       <a href="#">projectnav</a>        <ul>        <li><a href="#">item1</a></li>        <li><a href="#">item2</a></li>       </ul>       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>      </div>     </td>     <td id="bodycol">      <div id="featurenav">       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>      </div>      <div id="div2-6-0" class="app">       <h2>approve reject user submitted X (3.6.0.)</h2>       <p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>       <h3>open submissions</h3>       <table width="100%" border="1" cellspacing="2" cellpadding="3">        <tr>         <th nowrap="nowrap"><a href="#"><img src="http://dp-dev.sp.collab.net/scarab/images/milestonex_screens/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="http://dp-dev.sp.collab.net/scarab/images/milestonex_screens/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>         <th><a href="#" title="sort">date:</a></th>         <th><a href="#" title="sort">type:</a></th>         <th><a href="#" title="sort">submitted by:</a></th>                  <th><a href="#" title="sort">project:</a></th>                  <th><a href="#" title="sort">user role:</a></th>         <th><a href="#" title="sort">name:</a></th>         <th><a href="#" title="sort">description:</a></th>         <th>comments:</th>         <th>action:</th>        </tr>        <tr class="a">         <td><input type="checkbox" /></td>         <td>xx/xx/xxxx</td>         <td>attribute</td>         <td><a href="#">user@users.com</a></td>         <td>Project X.2</td>                  <td>role X</td>         <td><a href="#">attribute X</a></td>         <td>description X</td>                  <td><textarea rows="2" cols="20"></textarea>         </td>                  <td><select>          	<option>no action</option>          	<option>comment only</option>            <option>approve</option>		  	<option>reject</option>		  	</select>	  	</td>                          </tr>        <tr class="b">         <td><input type="checkbox" /></td>         <td>xx/xx/xxxx</td>         <td>query</td>         <td><a href="#">user@users.com</a></td>                  <td>Project X</td>                  <td>role X</td>         <td><a href="#">query X</a></td>                  <td>description X</td>                  <td><textarea rows="2" cols="20"></textarea>                 </td>                  <td><select>          	<option>no action</option>          	<option>comment only</option>          	<option>approve</option>		  	<option>reject</option>		  	</select>	  	</td>                          </tr>        <tr class="a">         <td><input type="checkbox" /></td>         <td>xx/xx/xxxx</td>         <td>enter issue template</td>         <td><a href="#">user@users.com</a></td>         <td>Project X.1</td>                  <td>role X</td>         <td><a href="#">template X</a></td>                  <td>description X</td>                  <td><textarea rows="2" cols="20"></textarea>              </td>                  <td><select>          	<option>no action</option>          	<option>comment only</option>          	<option>approve</option>		  	<option>reject</option>		  	</select>	  			  	</td>	</tr>       </table><div class="axial">		<table width="100%" border="1" cellspacing="2" cellpadding="3">        <tr>         <th width="120"><small>comments<br>         (sent to selected submittees)</small></th>		 <td><textarea rows="4" cols="40">         </textarea></td>        </tr>       </table></div>              <p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>      </div>     </td>    </tr>   </table>  </form> </body></html>
+<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
+"http://collabnet.com/dtds/collabnet_transitional_10.dtd">
+<html>
+
+<head>
+	<title>Approve Reject User Submitted X (3.6.0)</title>
+	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
+	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
+</head>
+
+<body>
+<form action="#" method="get">
+
+	<!-- SourceCast -->
+	<div id="banner">
+		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<tr>
+		
+		<td>
+		<div align="right" id="loginstatus">
+			<div>
+				Logged in as: <strong class="username">User XX</strong>
+			</div>
+			<div>
+				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+			</div>
+		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+<tr>
+<td id="leftcol" nowrap="nowrap" width="20%">
+<!-- Structural Elements -->
+	
+	<!-- SourceCast -->
+	<div id="navcol">
+		<table border="0" cellspacing="0" cellpadding="0" width="100%">
+			<tr>
+			<th>
+			<a href="#">Start page</a>
+			</th>
+			</tr>
+			<tr>
+			<th>
+			<a href="#">Projects</a>/<a href="#">Categories</a>
+			</th>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			Project tools
+			</th>
+			</tr>
+			<tr>
+			<td>
+			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;Issue tracking</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			</td>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			&nbsp;<a href="#">Admin Functions</a>
+			</th>
+			</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="helptext">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+		<th>How do I...?</th>
+		</tr>
+		<tr>
+		<td>
+			<div> 
+				<a href="#">[Go to help index]</a>
+			</div>
+			<div> 
+				<a href="#">Use this page</a>...
+			</div>
+			<div>
+				<a href="#">Learn about a project</a>...
+			</div>
+			<div>
+				<a href="#">Join a project</a>...
+			</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+<!-- Structural Elements -->
+</td>
+<td id="bodycol">
+<!-- Structural Elements -->
+
+	<!-- Scarab - App -->
+	<div id="topmodule">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+			<td nowrap="nowrap">
+			<select>
+			<option>saved queries</option>
+			<option>query one</option>
+			<option>query two</option>
+			</select> 
+			<input type="submit" name="query" value="Go" class="bttn" />
+			&nbsp;
+			<input type="text" size="15" name="" />
+			<input type="submit" name="query" value="Query" class="bttn" />
+			&nbsp;
+			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
+			</td>			
+		</tr>
+		</table>
+	</div>
+	<!-- Scarab - App -->
+	
+	<!-- Scarab - App -->
+	<div class="app" id="div3-6-0">
+		<h2>Approve Reject User Submitted X (3.6.0)</h2>
+
+		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
+		
+		<h3>open submissions</h3>
+		
+		<table width="100%" border="1" cellspacing="2" cellpadding="3">
+		<tr>
+		<th nowrap="nowrap"><a href="#"><img src="http://dp-dev.sp.collab.net/scarab/images/milestonex_screens/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="http://dp-dev.sp.collab.net/scarab/images/milestonex_screens/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+		<th><a href="#" title="sort">date:</a></th>
+		<th><a href="#" title="sort">type:</a></th>
+		<th><a href="#" title="sort">submitted by:</a></th>
+		<th><a href="#" title="sort">project:</a></th>
+		<th><a href="#" title="sort">user role:</a></th>
+		<th><a href="#" title="sort">name:</a></th>
+		<th><a href="#" title="sort">description:</a></th>
+		<th>comments:</th>
+		<th>action:</th>
+		</tr>
+		
+		<tr class="a">
+		<td><input type="checkbox" /></td>
+		<td>xx/xx/xxxx</td>
+		<td>attribute</td>
+		<td><a href="#">user@users.com</a></td>
+		<td>Project X.2</td>
+		<td>role X</td>
+		<td><a href="#">attribute X</a></td>
+		<td>description X</td>
+		<td><textarea rows="2" cols="20"></textarea></td>
+		<td><select>
+		<option>no action</option>
+		<option>comment only</option>
+		<option>approve</option>
+		<option>reject</option>
+		</select>
+		</td>                  
+		</tr>
+		
+		<tr class="b">
+		<td><input type="checkbox" /></td>
+		<td>xx/xx/xxxx</td>
+		<td>query</td>
+		<td><a href="#">user@users.com</a></td>
+		<td>Project X</td>
+		<td>role X</td>
+		<td><a href="#">query X</a></td>
+		<td>description X</td>
+		<td><textarea rows="2" cols="20"></textarea></td>
+		<td><select>
+		<option>no action</option>
+		<option>comment only</option>
+		<option>approve</option>
+		<option>reject</option>
+		</select>
+		</td>                  
+		</tr>
+		
+		<tr class="a">
+		<td><input type="checkbox" /></td>
+		<td>xx/xx/xxxx</td>
+		<td>enter issue template</td>
+		<td><a href="#">user@users.com</a></td>
+		<td>Project X.1</td>
+		<td>role X</td>
+		<td><a href="#">template X</a></td>
+		<td>description X</td>
+		<td><textarea rows="2" cols="20"></textarea></td>
+		
+		<td><select>
+		<option>no action</option>
+		<option>comment only</option>
+		<option>approve</option>
+		<option>reject</option>
+		</select>
+		</td>
+		</tr>
+		</table>
+		
+		<div class="axial">
+			<table width="100%" border="1" cellspacing="2" cellpadding="3">
+			<tr>
+			<th width="120"><small>comments<br>(sent to selected submittees)</small></th>
+			<td><textarea rows="4" cols="40"></textarea></td>
+			</tr>
+			</table>
+		</div>
+
+		<p id="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
+	</div>
+	<!-- Scarab - App -->
+
+<!-- Structural Elements -->
+</td>
+</tr>
+</table>
+<!-- Structural Elements -->
+
+	<!-- SourceCast -->
+	<div id="footer">
+		<p>
+		<a href="#">Domain Home</a> |
+		<a href="#">Help</a> | 
+		<a href="#">Site FAQ</a> |
+		<a href="#">Feedback</a>
+		</p>
+	</div>
+	<!-- SourceCast -->
+
+</form>
+</body>
+</html>
+
+
+
