--- a/www/ui/milestone8x_screens/3-6-0.html
+++ b/www/ui/milestone8x_screens/3-6-0.html
@@ -148,7 +148,7 @@
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th nowrap="nowrap"><a href="#"><img src="../images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+		<th nowrap="nowrap"><a href="#"><img src="../images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="http://dp-dev.sp.collab.net/scarab/images/milestonex_screens/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
 		<th><a href="#" title="sort">date:</a></th>
 		<th><a href="#" title="sort">type:</a></th>
 		<th><a href="#" title="sort">submitted by:</a></th>
