--- a/www/ui/milestone10x_screens/2-1-4-0.html
+++ b/www/ui/milestone10x_screens/2-1-4-0.html
@@ -166,7 +166,7 @@
 		most recent comments (otherwise, a link will appear to a seperate page).
 		</p>
 		
-		<h3>Attribute Group One</h3>
+		<h3>Attribute group one</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
@@ -258,7 +258,7 @@
 		
 		<p><input type="submit" value="add attribute" class="button" />&#160;<input type="submit" value="delete selected" class="button" />&#160;<input type="submit" value="resort attributes in this group" class="button" /></p>
 		
-		<h3>Attribute Group Two</h3>
+		<h3>Attribute group two</h3>
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
