--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -1,442 +1,373 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/2000/REC-xhtml1-20000126/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
+"http://collabnet.com/dtds/collabnet_transitional_10.dtd">
+<html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
- <head>
-  <title>Scarab UI</title>
-<style type="text/css">
-/* <![CDATA[ */
-body { background: white }
-th { background: #efefef }
-dd { margin-bottom: 1em } 
-dt { font-weight: bold }
-th, td { text-align: left; vertical-align: top }
-table {width: 100%} /* ]]> */
-</style>
+<head>
+	<title>Scarab UI</title>
+	<style type="text/css">
+		body { background: white; font-family: Verdana, Lucida, Arial, Helvetica, sans-serif; font-size: x-small; }
+		th { background: #ccc }
+		dd { margin-bottom: 1em } 
+		dt { font-weight: bold; font-size: small; color: white; background: #999; padding: 3px; }
+		th, td { text-align: left; vertical-align: top; padding: 3px; }
+		code, pre {	font-family: 'Andale Mono', monospace; font-size: 2em; }
+		table { width: 100% }
+		.a td { background: #efefef; }
+		.b td { background: #fff; }
+	</style>
+</head>
 
- </head>
+<body>
 
- <body>
- 
-<h1>Scarab UI</h1>
- <strong>Currently Being Updated</strong> - <em>August 29th, 2001; Matthew Caillouet</em>
+<h2>Scarab UI</h2>
+
+<strong>Currently Being Updated</strong> - <em>August 29th, 2001; Matthew Caillouet</em>
+
 <ul>
 	<li><a href="#milscre">Milestone screens - resource map</a></li>
 	<li><a href="#stygui">Style Guide</a></li>
 </ul>
 
- 
- 
-  <h2><a id="milscre" name="milscre">Milestone screens - resource map</a></h2>
-
-  <dl>
-   <dt>m1</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>comp</th>
-
-      <th>title</th>
-
-      <th>template pathname (/scarab/src/templates/screens)</th>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/2-1-0.html">2.1.0</a></td>
-
-      <td>Enter Issue</td>
-
-      <td>entry/Wizard1.vm</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/2-1-1.html">2.1.1</a></td>
-
-      <td>Identified as Duplicate</td>
-
-      <td>entry/Wizard2.vm</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/2-1-2.html">2.1.2</a></td>
-
-      <td>Enter Issue Verbose</td>
-
-      <td>entry/Wizard3.vm</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/2-1-4-0.html">2.1.4.0</a></td>
-
-      <td>Customize / Create "Enter Issue"</td>
-
-      <td>? - suggest 'CusCreEntIss.vm'</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/2-6-1.html">2.6.1</a></td>
-
-      <td>Issue Detail</td>
-
-      <td>? - suggest 'IssDet.vm'</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/2-6-2.html">2.6.2</a></td>
-
-      <td>Issue Detail Long Form</td>
-
-      <td>? - suggest 'IssDetLonFor.vm'</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/3-0-0.html">3.0.0</a></td>
-
-      <td>Global Attributes</td>
-
-      <td>admin/AttributeShow.vm</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/3-0-2-0.html">3.0.2.0</a></td>
-
-      <td>Add / Edit Attribute</td>
-
-      <td>admin/AttributeEdit.vm</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/3-0-2-0_step1.html">3.0.2.0 step 1</a></td>
-
-      <td>Add / Edit Attribute step 1</td>
-
-      <td>? - is this a state of AttributeEdit?</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/3-0-2-0_step2.html">3.0.2.0 step 2</a></td>
-
-      <td>Add / Edit Attribute step 2</td>
-
-      <td>? - is this a state of AttributeEdit?</td>
-     </tr>
-	 
-	 <tr>
-      <td><a href="./milestone1x_screens/funct_dir.html">funct_dir</a></td>
-
-      <td>User home screen</td>
-
-      <td>na</td>
-     </tr>
-    </table>
-   </dd>
-
-   <dt>m2</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>comp</th>
-
-      <th>title</th>
-
-      <th>template pathname (/scarab/src/templates/screens)</th>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone2x_screens/2-2-0-x.html">2.2.0.x</a></td>
-
-      <td>Custom Search</td>
-
-      <td>? - suggest 'CusSea.vm'</td>
-     </tr>
-     <tr>
-      <td><a href="./milestone2x_screens/2-2-0.html">2.2.0</a></td>
-
-      <td>Advanced Query</td>
-
-      <td>Query.vm</td>
-     </tr>
-     <tr>
-      <td><a href="./milestone2x_screens/2-2-1.html">2.2.1</a></td>
-
-      <td>Save Query</td>
-
-      <td>? - suggest 'SavQue.vm'</td>
-     </tr>
-     <tr>
-      <td><a href="./milestone2x_screens/2-6-0.html">2.6.0</a></td>
-
-      <td>Queue List / Search Results</td>
-
-      <td>? - suggest 'QueLisSeaRes.vm'</td>
-     </tr>
-    </table>
-   </dd>
-
-   <dt>m3</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>comp</th>
-
-      <th>title</th>
-
-      <th>template pathname (/scarab/src/templates/screens)</th>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone3x_screens/2-0-0-2.html">2.0.0.2</a></td>
-
-      <td>Vote Management</td>
-
-      <td>? - suggest 'VoteMan.vm'</td>
-     </tr>
-     <tr>
-      <td><a href="./milestone3x_screens/2-1-3.html">2.1.3</a></td>
-
-      <td>Assign Issue</td>
-
-      <td>? - suggest 'AssIss.vm'</td>
-     </tr>
-     <tr>
-      <td>2.7.0 <a href="./milestone3x_screens/2-7-0(1).html">(step 1)</a> | <a href="./milestone3x_screens/2-7-0(2).html">(step 2)</a></td>
-
-      <td>Move/copy issue</td>
-
-      <td>? - suggest 'MovCopIss.vm'</td>
-     </tr>
-     <tr>
-      <td><a href="./milestone3x_screens/3-3-0.html">3.3.0</a></td>
-
-      <td>Voting Management</td>
-
-      <td>? - suggest 'VotiMan.vm'</td>
-     </tr>
-    </table>
-   </dd>
-
-   <dt>m4</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>comp</th>
-
-      <th>title</th>
-
-      <th>template pathname (/scarab/src/templates/screens)</th>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone4x_screens/2-5-0.html">2.5.0</a></td>
-
-      <td>Workflow Customization Options</td>
-
-      <td>? - suggest 'WorCusOpt.vm'</td>
-     </tr>
-     <tr>
-      <td><a href="./milestone4x_screens/3-5-0.html">3.5.0</a></td>
-
-      <td>Workflow Customization Options</td>
-
-      <td>? - suggest 'WorCusOpt2.vm' - or is this a state of 2.5.0?</td>
-     </tr>
-    </table>
-   </dd>
-
-   <dt>m5</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>comp</th>
-
-      <th>title</th>
-
-      <th>template pathname (/scarab/src/templates/screens)</th>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone5x_screens/3-5-1.html">3.5.1</a></td>
-
-      <td>Define custom alert email</td>
-
-      <td>?</td>
-     </tr>
-    </table>
-   </dd>
-
-   <dt>m6 - reports: UI still under review</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>comp</th>
-
-      <th>title</th>
-
-      <th>template pathname (/scarab/src/templates/screens)</th>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone6x_screens/report_step1.html">2.4.0</a></td>
-
-      <td>step 1 in reports wizard</td>
-
-      <td>?</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone6x_screens/report_step1-5.html">2.4.0</a></td>
-
-      <td>step 2 in reports wizard: comparative analysis</td>
-
-      <td>?</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone6x_screens/report_step2.html">2.4.0</a></td>
-
-      <td>step 3 in reports wizard: comparative analysis</td>
-
-      <td>?</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone6x_screens/report_step3.html">2.4.0.1</a></td>
-
-      <td>step 4 in reports wizard: comparative analysis output</td>
-
-      <td>?</td>
-     </tr>
-
-
-     <tr>
-      <td><a href="./milestone6x_screens/report_step1-5b.html">2.4.0</a></td>
-
-      <td>step 2 in reports wizard: rate of change</td>
-
-      <td>?</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone6x_screens/report_step2b.html">2.4.0</a></td>
-
-      <td>step 3 in reports wizard: rate of change</td>
-
-      <td>?</td>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone6x_screens/report_step3b.html">2.4.0.1</a></td>
-
-      <td>step 4 in reports wizard: rate of change output</td>
-
-      <td>?</td>
-     </tr>
-
-
-    </table>
-   </dd>
-
-   <dt>m7 contains no template screens</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>-</th>
-
-      <th>-</th>
-
-      <th>-</th>
-     </tr>
-
-     <tr>
-      <td>-</td>
-
-      <td>-</td>
-
-      <td>-</td>
-     </tr>
-    </table>
-   </dd>
-
-   <dt>m8</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>comp</th>
-
-      <th>title</th>
-
-      <th>template pathname (/scarab/src/templates/screens)</th>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone8x_screens/3-6-0.html">3-6-0</a></td>
-
-      <td>Approve/reject user submitted X</td>
-
-      <td>?</td>
-     </tr>
-    </table>
-   </dd>
-
-   <dt>m10</dt>
-
-   <dd>
-    <table>
-     <tr>
-      <th>comp</th>
-
-      <th>title</th>
-
-      <th>template pathname (/scarab/src/templates/screens)</th>
-     </tr>
-
-     <tr>
-      <td><a href="./milestone1x_screens/">1</a></td>
-
-      <td>2</td>
-
-      <td>?</td>
-     </tr>
-    </table>
-   </dd>
-  </dl>
-  
-<h2><a id="stygui" name="stygui">Style Guide</a></h2>
+<h3><a name="milscre">Milestone screens - resource map</a></h3>
+<dl>
+	<dt>milestone 1</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>comp</th>
+		<th>title</th>
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone1x_screens/2-1-0.html">2.1.0</a></td>
+		<td>Enter Issue</td>
+		<td>entry/Wizard1.vm</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone1x_screens/2-1-1.html">2.1.1</a></td>
+		<td>Identified as Duplicate</td>
+		<td>entry/Wizard2.vm</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone1x_screens/2-1-2.html">2.1.2</a></td>
+		<td>Enter Issue Verbose</td>
+		<td>entry/Wizard3.vm</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone1x_screens/2-1-4-0.html">2.1.4.0</a></td>
+		<td>Customize / Create "Enter Issue"</td>
+		<td>? - suggest 'CusCreEntIss.vm'</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone1x_screens/2-6-1.html">2.6.1</a></td>
+		<td>Issue Detail</td>
+		<td>? - suggest 'IssDet.vm'</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone1x_screens/2-6-2.html">2.6.2</a></td>
+		<td>Issue Detail Long Form</td>
+		<td>? - suggest 'IssDetLonFor.vm'</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone1x_screens/3-0-0.html">3.0.0</a></td>
+		<td>Global Attributes</td>
+		<td>admin/AttributeShow.vm</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone1x_screens/3-0-2-0.html">3.0.2.0</a></td>
+		<td>Add / Edit Attribute</td>
+		<td>admin/AttributeEdit.vm</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone1x_screens/3-0-2-0_step1.html">3.0.2.0 step 1</a></td>
+		<td>Add / Edit Attribute step 1</td>
+		<td>? - is this a state of AttributeEdit?</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone1x_screens/3-0-2-0_step2.html">3.0.2.0 step 2</a></td>
+		<td>Add / Edit Attribute step 2</td>
+		<td>? - is this a state of AttributeEdit?</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone1x_screens/funct_dir.html">funct_dir</a></td>
+		<td>User home screen</td>
+		<td>na</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>milestone 2</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>comp</th>	
+		<th>title</th>	
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone2x_screens/2-2-0-x.html">2.2.0.x</a></td>	
+		<td>Custom Search</td>	
+		<td>? - suggest 'CusSea.vm'</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone2x_screens/2-2-0.html">2.2.0</a></td>	
+		<td>Advanced Query</td>	
+		<td>Query.vm</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone2x_screens/2-2-1.html">2.2.1</a></td>	
+		<td>Save Query</td>	
+		<td>? - suggest 'SavQue.vm'</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone2x_screens/2-6-0.html">2.6.0</a></td>	
+		<td>Queue List / Search Results</td>	
+		<td>? - suggest 'QueLisSeaRes.vm'</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>milestone 3</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>comp</th>	
+		<th>title</th>	
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone3x_screens/2-0-0-2.html">2.0.0.2</a></td>	
+		<td>Vote Management</td>	
+		<td>? - suggest 'VoteMan.vm'</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone3x_screens/2-1-3.html">2.1.3</a></td>	
+		<td>Assign Issue</td>	
+		<td>? - suggest 'AssIss.vm'</td>
+		</tr>
+		
+		<tr class="a">
+		<td>2.7.0 <a href="./milestone3x_screens/2-7-0_step1.html">(step 1)</a> | <a href="./milestone3x_screens/2-7-0_step2.html">(step 2)</a></td>
+		<td>Move/copy issue</td>	
+		<td>? - suggest 'MovCopIss.vm'</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone3x_screens/3-3-0.html">3.3.0</a></td>	
+		<td>Voting Management</td>	
+		<td>? - suggest 'VotiMan.vm'</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>milestone 4</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>comp</th>	
+		<th>title</th>	
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone4x_screens/2-5-0.html">2.5.0</a></td>	
+		<td>Workflow Customization Options</td>	
+		<td>? - suggest 'WorCusOpt.vm'</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone4x_screens/3-5-0.html">3.5.0</a></td>	
+		<td>Workflow Customization Options</td>
+		<td>? - suggest 'WorCusOpt2.vm' - or is this a state of 2.5.0?</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>milestone 5</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>comp</th>	
+		<th>title</th>	
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone5x_screens/3-5-1.html">3.5.1</a></td>	
+		<td>Define custom alert email</td>	
+		<td>?</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>milestone 6 - reports: UI still under review</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>comp</th>	
+		<th>title</th>	
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone6x_screens/2-4-0_step1.html">2-4-0_step1</a></td>	
+		<td>step 1 in reports wizard</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone6x_screens/2-4-0_step1-5.html">2-4-0_step1-5</a></td>	
+		<td>step 2 in reports wizard: comparative analysis</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone6x_screens/2-4-0_step2.html">2-4-0_step2</a></td>
+		<td>step 3 in reports wizard: comparative analysis</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone6x_screens/2-4-0_step3.html">2-4-0_step3</a></td>	
+		<td>step 4 in reports wizard: comparative analysis output</td>	
+		<td>?</td>
+		</tr>
+		
+		
+		<tr class="a">
+		<td><a href="./milestone6x_screens/2-4-0_step1-5b.html">2-4-0_step1-5b</a></td>	
+		<td>step 2 in reports wizard: rate of change</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone6x_screens/2-4-0_step2b.html">2-4-0_step2b</a></td>	
+		<td>step 3 in reports wizard: rate of change</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone6x_screens/2-4-0_step3b.html">2-4-0_step3b</a></td>	
+		<td>step 4 in reports wizard: rate of change output</td>	
+		<td>?</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>milestone 7 contains no template screens</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>-</th>	
+		<th>-</th>
+		<th>-</th>
+		</tr>
+		
+		<tr>
+		<td>-</td>	
+		<td>-</td>	
+		<td>-</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>milestone 8</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>comp</th>	
+		<th>title</th>	
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone8x_screens/3-6-0.html">3-6-0</a></td>	
+		<td>Approve / reject user submitted X</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone8x_screens/2.0.0.1.1.html">2.0.0.1.1</a></td>	
+		<td>Add / remove / sort queues</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone8x_screens/2-0-0-1-2.html">2-0-0-1-2</a></td>	
+		<td>Predefined queue list</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone8x_screens/2-0-0-1-3.html">2-0-0-1-3</a></td>	
+		<td>Queue</td>	
+		<td>?</td>
+		</tr>
+		</table>
+	</dd>
+	
+	<dt>milestone 10</dt>
+	<dd>
+		<table>
+		<tr>
+		<th>comp</th>	
+		<th>title</th>	
+		<th>template pathname (/scarab/src/templates/screens)</th>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone10x_screens/2-1-0-1.html">2-1-0-1</a></td>	
+		<td>Save / edit template</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="b">
+		<td><a href="./milestone10x_screens/2-1-0-2.html">2-1-0-2</a></td>	
+		<td>Template list</td>	
+		<td>?</td>
+		</tr>
+		
+		<tr class="a">
+		<td><a href="./milestone10x_screens/2-1-4-0.html">2-1-4-0</a></td>	
+		<td>Customize / create "enter issue"</td>	
+		<td>?</td>
+		</tr>
+		</table>
+	</dd>
+</dl>
+
+<h3><a id="stygui" name="stygui">Style Guide</a></h3>
 
 <pre>
-Structure
-
-
-Usage
-
- Headings
-
- Tables
-
- Divisions and paragraphs
-
- BR: mostly evil
-
- Miscellaneous class and ID attributes
-
-
-Syntax
-
-
-Cascading Style Sheets
-
+	Structure
+	Usage
+	Headings
+	Tables
+	Divisions and paragraphs
+	BR: mostly evil
+	Miscellaneous class and ID attributes
+	Syntax
+	Cascading Style Sheets
 </pre>
-  
-  
- </body>
+
+</body>
 </html>
 
 
