--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,8 @@
 
 <h2>Scarab UI</h2>
 
-<strong>Currently Being Updated</strong> - <em>August 31th, 2001; 10:14 am EST; <a href="mailto:matthew@collab.net">matthew</a></em>
+<em>$Id: index.html,v 1.21 2001/08/31 17:33:42 Matthew Exp $ <a href=""
+<strong>Currently Being Updated</strong> - <em>$Id: index.html,v 1.21 2001/08/31 17:33:42 Matthew Exp $ <a href="mailto:matthew@collab.net">matthew</a></em>
 
 <ul>
 	<li><a href="#milscre">Milestone screens - resource map</a></li>
