--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,9 @@
 
 <h2>Scarab UI</h2>
 
-<em>$Id: index.html,v 1.22 2001/08/31 17:35:38 Matthew Exp $ <a href=""></a></em>
+<strong>Currently Being Updated</strong> - <em>August 31th, 2001; 10:14 am EST; <a href="mailto:matthew@collab.net">matthew</a></em>
+
+<em>$Id: index.html,v 1.23 2001/08/31 17:36:38 Matthew Exp $ <a href=""></a></em>
 
 
 <ul>
