--- a/www/ui/milestone1x_screens/2-1-4-0.html
+++ b/www/ui/milestone1x_screens/2-1-4-0.html
@@ -148,7 +148,7 @@
 		<h3>Attribute group one</h3>
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
 		<th>name:</th>
 		<th>name/project:</th>
 		<th>input type:</th>
