--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -40,49 +40,21 @@
 	
 	<!-- SourceCast -->
 	<div id="navcolumn">
-		<table border="0" cellspacing="0" cellpadding="0" width="100%">
-			<tr>
-			<th>
-			<a href="#">My start page</a>
-			</th>
-			</tr>
-			<tr>
-			<th>
-			<a href="#">Projects &amp; categories</a>
-			</th>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			Project tools
-			</th>
-			</tr>
-			<tr>
-			<td>
-			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
+		<div><strong><a href="#">My start page</a></strong></div>
+		<div><strong><a href="#">Projects &amp; categories</a></strong></div>
+		<div>Project tools</div>
+			<div>&nbsp;&raquo;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&raquo;&nbsp;Issue tracking</div>
 			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
 			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
 			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="reports operations">Reports</a></div>
 			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
 			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
-			</td>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			&nbsp;<a href="#">Admin functions</a>
-			</th>
-			</tr>
-		</table>
+			<div>&nbsp;&raquo;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&raquo;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&raquo;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&raquo;&nbsp;<a href="#">Source code</a></div>
+		<div><strong><a href="#">Admin functions</a></strong></div>
 	</div>
 	<!-- SourceCast -->
 	
@@ -90,23 +62,15 @@
 	<div id="helptext">
 		<table border="0" cellspacing="0" cellpadding="3" width="100%">
 		<tr>
-		<th>How do I...?</th>
+			<th><strong><a href="../help_screens/index.html" title="contents, index, glossary and support..." target="_new">Help Files...</a></strong></th>
 		</tr>
 		<tr>
-		<td>
-			<div> 
-				<a href="../help_screens/index.html" target="_new">[Go to help index]</a>
-			</div>
-			<div> 
-				<a href="#">Use this page</a>...
-			</div>
-			<div>
-				<a href="#">Learn about a project</a>...
-			</div>
-			<div>
-				<a href="#">Join a project</a>...
-			</div>
-		</td>
+			<td>
+			<div><strong>How do I...?</strong></div>
+			<div><a href="#">Use this page</a></div>
+			<div><a href="#">Learn about a project</a></div>
+			<div><a href="#">Join a project</a></div>
+			</td>
 		</tr>
 		</table>
 	</div>
